# quantum.harness

./: .gitignore  AGENTS.md  Ion.toml  Makefile  README.md
.cryo/: README.md  cryo.toml  (+1 more)
.knowledge/solvable/: INDEX.md  _TEMPLATE.md  pyproject.toml  ref.bib
.knowledge/solvable/_lib/: cli.py  ed.py  gf2.py  quadratic.py  topology.py
.knowledge/solvable/anderson-1d/: ORACLE.md  oracle.py
.knowledge/solvable/bogoliubov-bose-gas/: ORACLE.md  oracle.py
.knowledge/solvable/cluster-spt/: ORACLE.md  oracle.py
.knowledge/solvable/color-code/: ORACLE.md  oracle.py
.knowledge/solvable/haah-code/: ORACLE.md  oracle.py
.knowledge/solvable/haldane-chern/: ORACLE.md  oracle.py
.knowledge/solvable/harmonic-chain/: ORACLE.md  oracle.py
.knowledge/solvable/hofstadter-harper/: ORACLE.md  oracle.py
.knowledge/solvable/kitaev-chain/: ORACLE.md  oracle.py
.knowledge/solvable/kitaev-honeycomb/: ORACLE.md  oracle.py
.knowledge/solvable/long-range-kitaev/: ORACLE.md  oracle.py
.knowledge/solvable/p-ip-superconductor/: ORACLE.md  oracle.py
.knowledge/solvable/quantum-double/: ORACLE.md  oracle.py
.knowledge/solvable/ssh-chain/: ORACLE.md  oracle.py
.knowledge/solvable/string-net/: ORACLE.md  oracle.py
.knowledge/solvable/tests/: test_build_page.py  test_lib.py  test_oracles.py
.knowledge/solvable/tfim-chain/: ORACLE.md  oracle.py
.knowledge/solvable/tight-binding-lattices/: ORACLE.md  oracle.py
.knowledge/solvable/toric-code/: ORACLE.md  oracle.py
.knowledge/solvable/x-cube/: ORACLE.md  oracle.py
.knowledge/solvable/xy-chain/: ORACLE.md  oracle.py
(+346 files in other folders)
